--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,19 @@
 
 @layer components {
   body {
-    @apply bg-purple-900;
+    @apply bg-[#060417];
+  }
+
+  .navlink {
+    @apply text-[0.9rem] text-white relative cursor-pointer; 
+  }
+
+  .navlink::before {
+    content: '';
+    @apply w-[2rem] h-[0.2rem] bg-gradient-to-r from-[#a993fe] to-[#7e61e7] rounded-lg absolute bottom-[-0.6rem] opacity-0 translate-x-[-1.5rem] transition duration-300;
+  }
+
+  .navlink:hover::before {
+    @apply w-[100%] translate-x-[0] opacity-100;
   }
 }
