--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer components {
   body {
-    @apply bg-[#060417] text-white;
+    @apply bg-[#060417] text-white w-full overflow-x-hidden;
   }
 
   .navlink {
