--- a/src/index.css
+++ b/src/index.css
@@ -121,7 +121,7 @@ html {
   }
 
   .demo-btn {
-    @apply border-none rounded-3xl p-[10px] w-48 outline-none z-[6];
+    @apply border-none rounded-3xl p-[10px] w-48 outline-none grid place-content-center;
     background: linear-gradient(90deg, #a993fe -0.13%,  #7e61e7 99.87%);
   }
 
