--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,40 @@ html {
     @apply bg-[#060417] text-white w-full overflow-x-hidden;
   }
 
-  `
+  .navlink {
+    @apply text-[0.9rem] text-white relative cursor-pointer; 
+  }
+
+  .navlink::before {
+    content: '';
+    @apply w-[2rem] h-[0.2rem] bg-gradient-to-r from-[#a993fe] to-[#7e61e7] rounded-lg absolute bottom-[-0.6rem] opacity-0 translate-x-[-1.5rem] transition duration-300;
+  }
+
+  .navlink:hover::before {
+    @apply w-[100%] translate-x-[0] opacity-100;
+  }
+
+  .menu-btn {
+    @apply w-[2.5rem] h-[2.5rem] text-[1.2rem] flex items-center justify-center border-none rounded-lg text-white cursor-pointer lg:hidden hover:text-[#a993fe] hover:bg-black hover:border hover:border-[#a993fe];
+    background: linear-gradient(90deg, #a993fe -0.13%,  #7e61e7 99.87%);
+  }
+
+  .menu-btn:hover {
+    background: #000;
+    transition: 0.3s all ease;
+  }
+
+  .mobile-menu {
+    @apply w-screen h-screen bg-[rgba(0,0,0,0.3)] fixed left-0 top-0 z-[999] opacity-0;
+    box-shadow: 0px 29px 80px rgba(0, 0, 0, 0.3);
+    transition: all 0.3s ease;
+    transform: translateX(-100vw);
+  }
+
+  .active {
+    opacity: 1;
+    transform: translateX(0);
+  }
 
   .hero-container {
     @apply flex items-center mb-48 relative flex-col lg:flex-row;
